# aoc2022

./: .gitignore  init.py  pyproject.toml
day01/: run.py
day02/: run.py
day03/: run.py
day04/: run.py
day05/: run.py
day06/: .start  run.py
day07/: .start  run.py
day08/: .start  run.py
day09/: .start  run.py
day10/: .start  run.py
day11/: .start  run.py
day12/: .start  run.py
day13/: .start  run.py
day14/: .start  cave.txt  run.py
day21/: .start  run.py  solve.py
