[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.25.0"
beautifulsoup4 = "^4.10.0"
numpy = "^1.21.4"
scipy = "^1.7.3"
scikit-image = "^0.19.0"
networkx = "^2.6.3"
matplotlib = "^3.5.1"
bitstruct = "^8.12.1"
pendulum = "^2.1.2"
plotly = "^5.4.0"
pandas = "^1.3.5"
attrs = "^22.1.0"
more-itertools = "^9.0.0"
icecream = "^2.1.3"
numba = "^0.56.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
